samples/SEMANTIC_ERROR/fcall_undef_var1.php
<?php
declare(strict_types=1);
function foo(int $r) : int
{
    return 1;
}
foo($a);
